Integrate trivia router and scheduler

--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
 DATABASE_URL=postgresql+asyncpg://postgres:QTrweymKNskWGTuPHGyGhBzCKUHfYyoZ@postgres.railway.internal:5432/railway
+
+CANAL_KINKYS_ID=0
+CANAL_DIVAN_ID=0
