--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 DATABASE_URL=postgresql+asyncpg://postgres:QTrweymKNskWGTuPHGyGhBzCKUHfYyoZ@postgres.railway.internal:5432/railway
+BOT_TOKEN=123456:ABC-DEF1234567890
