--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-REACT_APP_BACKEND_URL=http://0.0.0.0:8001
+REACT_APP_BACKEND_URL=https://8e92d61d-2513-410b-804f-897eaaadb608.preview.emergentagent.com
 WDS_SOCKET_PORT=443
